--- a/project-template/index.html
+++ b/project-template/index.html
@@ -88,7 +88,7 @@
 					<header class="major">
 						<h2>About VEDAMS</h2>
 						<p>VEDAMS is a vehicle emission detection and monitoring system that uses IOT to help you monitor
-							your vehicle's emission data and keeps you updated. It uses three gas sensors, embedded in an arduino borad
+							your vehicle's emission data and keeps you updated. It uses three gas sensors, embedded in an arduino board
 							to detect the quality and quantity of emission from the vehicles. It uses ESP wi-fi module to take the sensor's 
 							real-time data and sends it to the ThingSpeak cloud for analysis. ThingSpeak is also used to trigger a reaction i.e 
 							a message to mobile and email about breaching of threshold limit.
