--- a/project-template/profile.html
+++ b/project-template/profile.html
@@ -15,7 +15,7 @@
         <nav id="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="generic.html">Services</a></li>
+                <li><a href="index.html">Services</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="#" class="button special">Sign Up</a></li>
             </ul>
