--- a/project-template/index.html
+++ b/project-template/index.html
@@ -43,7 +43,7 @@
 				<p>Vehicle Emission Detection and Monitoring System.</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">Learn More</a>
+						<a href="#two" class="button big">Learn More</a>
 					</li>
 				</ul>
 			</section>
