--- a/project-template/generic.html
+++ b/project-template/generic.html
@@ -26,12 +26,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Transit</a></h1>
+				<h1><a href="index.html">VEDAMS</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="index.html">Services</a></li>
+						<li><a href="profile.html">Profile</a></li>
 						<li><a href="#" class="button special">Sign Up</a></li>
 					</ul>
 				</nav>
@@ -59,7 +59,7 @@
 				<div class="container">
 					<section class="links">
 						<div class="row">
-							<section class="3u 6u(medium) 12u$(small)">
+							<!-- <section class="3u 6u(medium) 12u$(small)">
 								<h3>Lorem ipsum dolor</h3>
 								<ul class="unstyled">
 									<li><a href="#">Lorem ipsum dolor sit</a></li>
@@ -98,15 +98,15 @@
 									<li><a href="#">Tempore nam, enim quia</a></li>
 									<li><a href="#">Explicabo molestiae dolor labore</a></li>
 								</ul>
-							</section>
+							</section> -->
 						</div>
 					</section>
 					<div class="row">
 						<div class="8u 12u$(medium)">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li>
-								<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-								<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+								<li>&copy;VEDAMS. All rights reserved.</li>
+								<li><a href="#">Contact us</a></li>
+								<li>Images by <a href="http://unsplash.com">Unsplash</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
