--- a/project-template/index.html
+++ b/project-template/index.html
@@ -32,7 +32,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="#one">Services</a></li>
 						<li><a href="profile.html">Profile</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="registration-form.html" class="button special">Sign Up</a></li>
 					</ul>
 				</nav>
 			</header>
